aws_k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interview-app
  template:
    metadata:
      labels:
        app: interview-app
    spec:
      containers:
      - name: interview-app
        image: 211125652144.dkr.ecr.us-east-1.amazonaws.com/interview-app:1.11
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: uploads-storage
          mountPath: /code/uploads
      volumes:
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: uploads-pvc
