aws_k8s/otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: 211125652144.dkr.ecr.us-east-1.amazonaws.com/custom-otel-collector:0.39.0
        args: ["--config=/etc/otel-collector-config.yaml"]
        ports:
        - containerPort: 4317
        - containerPort: 4318
        volumeMounts:
        - name: config-volume
          mountPath: /etc/otel-collector-config.yaml
          subPath: config.yaml
      volumes:
      - name: config-volume
        configMap:
          name: otel-collector-config
