aws_k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interview-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: interview-app
