aws_k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interview-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: job-interview-bot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: interview-app
            port:
              number: 80
  tls:
  - hosts:
    - job-interview-bot.com
    secretName: interview-app-tls
